src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__book_details_ui__book_details_ui_tests__tests__snapshot_tests__book_details_renders_ManualBookSearchSortPrompt_3.snap
---
source: src/ui/readarr_ui/library/book_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
             ╭  Test Book Details  ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮               
             │ Editions │ History │ File │ Manual Search                                                                                             │               
             │───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│               
             │   Source    Age        ⛔     Title                                        Indexer              Size         Peers        Quality      │               
             │=> torrent   1 days     ⛔     Test Torrent Release                         kickass torrents     0.0 GB       2 / 1        EPUB         │               
             │   usenet    1 days     ⛔     Test Usenet Release                          DrunkenSlug          0.0 GB                    EPUB         │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                      ╭─────────────────────────╮                                                      │               
             │                                                      │Something                │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      ╰─────────────────────────╯                                                      │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
